--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
+cycler==0.10.0
+joblib==0.15.0
+kiwisolver==1.2.0
+matplotlib==3.2.1
 numpy==1.18.4
-Werkzeug==1.0.1
+pandas==1.0.3
+pyparsing==2.4.7
+python-dateutil==2.8.1
+pytz==2020.1
+scikit-learn==0.23.0
+scipy==1.4.1
+six==1.14.0
+threadpoolctl==2.0.0
